# stock-forecast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py
config/: default.yaml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/: ExternalDataBadge.tsx  FoldChart.tsx  MetricCard.tsx  ReportNav.tsx  TopFeatures.tsx  VerdictBadge.tsx
frontend/src/lib/: data.ts  report-utils.ts  types.ts
scripts/: build_gdelt_cache.py  demo_agents.py  demo_agents_llm.py  run_ablation.py
src/: startup.py
src/agents/: __init__.py  base_agent.py  data_agent.py  evaluation_agent.py  llm_client.py  modeling_agent.py  orchestrator.py  planner_agent.py  report_agent.py  schemas.py
src/backtest/: metrics.py  walk_forward.py
src/data/: loader.py  schema.py  synthetic.py
src/features/: external_merge.py  indicators.py  pipeline.py
src/models/: base.py  baselines.py  lgbm_model.py
tests/: test_agents.py  test_agents_llm.py  test_backtest.py  test_dart_client.py  test_external_merge.py  test_features.py  test_news_client.py  test_pipeline_cli.py  test_startup.py
